--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.18.2",
-        "openai": "^4.80.1"
+        "openai": "^4.80.1",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
