--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@notionhq/client": "^2.2.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
+        "exceljs": "^4.4.0",
         "express": "^4.18.2",
         "openai": "^4.80.1",
         "socket.io": "^4.8.1"
